? - ?
* New bindings :
  * sysinfo
  * mtrace muntrace
+ U.Poll.is_inter

0.1.1 - 18 May 2014
* New bindings :
  * gettid
  * poll
* OCaml 4.02 compatibility (install all .cmi)
* sendmsg/sendfd : fix sending binary data

0.1.0 - 8 Oct 2013
* statvfs: add f_flags - decoded f_flag field
* New bindings :
  * sysconf
  * splice tee vmsplice
  * setsockopt_int getsockopt_int (TCP keepalive)
  * sync syncfs
  * timezone
* OCaml 4.01 compatibility (Unix.open_flag)
* relax restrictions on bigarray types

0.0.6 - 1 Apr 2013
* New string and bigarray functions :
  * get_uint63 set_uint63 get_int63 set_int63
* fstatat: flags parameter was omitted
* New bindings :
  * readlinkat
  * getifaddrs

0.0.5 - 16 Jun 2012
* src/discover.ml :
  * New option -q to suppress stderr
  * --disable-* options to exclude selected features from build
* More precise test for `sendmsg` (bug #1162)
* Fix FTBFS on kfreebsd-* (Debian patch)
* Unit tests are disabled by default and oUnit is now an optional dependency,
  configure with --enable-tests to build tests
* OCaml 4 compatibility (Unix.open_flag)
* List email contacts (bug #1108)

0.0.4 - 19 May 2012
* ExtUnix now depends on Bigarray and provides variants of 
  some bindings operating on bigarray buffers (BA submodule)
* New bindings :
  * timegm
  * malloc_stats
  * malloc_info
  * read_credentials
  * fexecve
  * sendmsg recvmsg
  * pread pwrite (+ LargeFile and BA variants)
  * read write (+ LargeFile and BA variants)
  * mkstemp mkostemp
  * setresuid setresgid
  * posix_memalign
  * New submodules: BigEndian LittleEndian HostEndian
    * New bindings
      * uint16_from_host uint16_to_host
      *  int16_from_host  int16_to_host
      * uint31_from_host uint31_to_host
      *  int31_from_host  int31_to_host
      *  int32_from_host  int32_to_host
      *  int64_from_host  int64_to_host
    * New string and bigarray functions
      * get_uint8  set_uint8  get_int8  set_int8
      * get_uint16 set_uint16 get_int16 set_int16