@@ -2,7 +2,7 @@ OASISFormat:  0.3
 Name:         extunix
 Version:      0.1.1
 License:      LGPL-2.1 with OCaml linking exception
-Authors:      ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi, Gerd Stolpmann, Goswin von Brederlow, Andre Nathan, Zhenya Lykhovyd, Mehdi Dogguy, Roman Vorobets, Pierre Chambart, Dmitry Grebeniuk
+Authors:      ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi, Gerd Stolpmann, Goswin von Brederlow, Andre Nathan, Zhenya Lykhovyd, Mehdi Dogguy, Roman Vorobets, Pierre Chambart, Dmitry Grebeniuk, François Bobot
 Copyrights:
               (C) 2010 ygrek,
               (C) 2009 Sylvain Le Gall,
@@ -18,6 +18,7 @@ Copyrights:
               (C) 2013 Roman Vorobets,
               (C) 2013 Pierre Chambart,
               (C) 2013 Dmitry Grebeniuk
+              (C) 2015 François Bobot
 Homepage:     http://extunix.forge.ocamlcore.org/
 BuildTools:   ocamlbuild, camlp4
 Plugins:      DevFiles (0.3), META (0.3)
@@ -51,7 +52,7 @@ Library extunix
             endian.c, read_cred.c, fexecve.c, sendmsg.c,
             memalign.c, endianba.c, pread_pwrite_ba.c, bigarray.c,
             splice.c, sysconf.c, common.c, common.h, sockopt.c, poll.c,
-            sysinfo.c
+            sysinfo.c, mount.c
   BuildDepends: unix, bigarray
 
 Executable test
