@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: c8d9712de47312f524c6998e330c7585) *)
+(* DO NOT EDIT (digest: 83d5b1dece004a7be663c45dbd47490b) *)
 (*
    Regenerated by OASIS v0.4.5
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -6886,7 +6886,7 @@ let setup_t =
                "(C) 2013 Mehdi Dogguy";
                "(C) 2013 Roman Vorobets";
                "(C) 2013 Pierre Chambart";
-               "(C) 2013 Dmitry Grebeniuk"
+               "(C) 2013 Dmitry Grebeniuk\n(C) 2015 Bobot Fran\195\167ois"
             ];
           maintainers = [];
           authors =
@@ -6904,7 +6904,8 @@ let setup_t =
                "Mehdi Dogguy";
                "Roman Vorobets";
                "Pierre Chambart";
-               "Dmitry Grebeniuk"
+               "Dmitry Grebeniuk";
+               "Bobot Fran\195\167ois"
             ];
           homepage = Some "http://extunix.forge.ocamlcore.org/";
           synopsis = "Extended functions for OCaml Unix module";
@@ -7040,7 +7041,8 @@ let setup_t =
                            "common.h";
                            "sockopt.c";
                            "poll.c";
-                           "sysinfo.c"
+                           "sysinfo.c";
+                           "mount.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
@@ -7226,7 +7228,7 @@ let setup_t =
        };
      oasis_fn = Some "_oasis";
      oasis_version = "0.4.5";
-     oasis_digest = Some "\029j\187\002\136#;\179\2379k<;3j=";
+     oasis_digest = Some "\205\029f-\138y\189\243\253](;\021\016\209,";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false
@@ -7234,6 +7236,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 7238 "setup.ml"
+# 7240 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
