@@ -627,6 +627,27 @@ struct
 
 end (* module LargeFile *)
 
+HAVE MOUNT
+
+(** {3 mount system call} *)
+
+type mount_flag =
+  | MS_RDONLY | MS_NOSUID | MS_NODEV | MS_NOEXEC | MS_SYNCHRONOUS | MS_REMOUNT
+  | MS_MANDLOCK | MS_DIRSYNC | MS_NOATIME | MS_NODIRATIME | MS_BIND | MS_MOVE
+  | MS_REC | MS_SILENT | MS_POSIXACL | MS_UNBINDABLE | MS_PRIVATE | MS_SLAVE
+  | MS_SHARED | MS_RELATIME | MS_KERNMOUNT | MS_I_VERSION | MS_STRICTATIME
+  | MS_NOUSER
+
+external mount: string -> string -> string ->
+  mount_flag list -> string -> unit = "caml_extunix_mount"
+
+type umount2_flag =
+  | MNT_FORCE | MNT_DETACH | MNT_EXPIRE | UMOUNT_NOFOLLOW
+
+external umount2: string -> umount2_flag list -> unit = "caml_extunix_umount"
+
+END
+
 (** {2 ioctl} *)
 
 (** Control the underlying device parameters of special files *)
